kubernetes/main/apps/downloads/recyclarr/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: recyclarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: recyclarr
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toFQDNs:
        - matchName: github.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "22"
              protocol: TCP
# TODO: L7 egress policy for:
# https://github.com/TRaSH-Guides/Guides.git
# https://github.com/recyclarr/config-templates
